# frameflow

./: CMakeLists.txt  LICENSE  README.md  test.sh
include/frameflow/: layout.hpp  layout_pretty_print.h
src/: layout.cpp
tests/: CMakeLists.txt  frameflow_allocation_test.cpp  frameflow_layout_tests.cpp  sdl_smoke_test.cpp
